Time: 3 ms (93%), Space: 46.7 MB (43.1%) - LeetHub